--- a/public/index.html
+++ b/public/index.html
@@ -49,14 +49,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="preload" as="image" href="https://vcaterings.com/img/hero1.43374f2e.jpg">
-  <link rel="preload" href="https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnec3NE.woff2" as="font"
-    type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrFJdecmNE.woff2" as="font"
-    type="font/woff2" crossorigin="anonymous">
-
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="stylesheet" href="public/styles/global.scss">
-   <!-- Defer non-critical CSS -->
-   <link rel="stylesheet" href="/css/non-critical.css" defer>
+  <!-- Defer non-critical CSS -->
+  <link rel="stylesheet" href="/css/non-critical.css" defer>
 </head>
 
 <body>
@@ -66,8 +62,8 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-     <!-- Defer non-critical JavaScript -->
-     <script src="/js/non-critical.js" defer></script>
+  <!-- Defer non-critical JavaScript -->
+  <script src="/js/non-critical.js" defer></script>
 </body>
 
 </html>
