--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       background-color: #e0e0e0;
     }
   </style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="preload" as="image" href="https://vcaterings.com/img/hero1.43374f2e.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
