--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/hero2.f269c4f2.jpg">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/hero1.43374f2e.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="stylesheet" href="public/styles/global.scss">
   <!-- Defer non-critical CSS -->
