--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
   <link rel="preload" as="image" href="https://vcaterings.com/img/hero2.f269c4f2.jpg">
   <link rel="preload" as="image" href="https://vcaterings.com/img/hero1.43374f2e.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="stylesheet" href="public/styles/global.scss">
-  <!-- Defer non-critical CSS -->
+  <!-- Ensure the correct MIME type is served -->
+  <link rel="stylesheet" href="public/styles/global.css">
   <link rel="stylesheet" href="/css/non-critical.css" defer>
 </head>
 
@@ -63,8 +63,7 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
-  <!-- Defer non-critical JavaScript -->
+  <!-- Ensure the correct MIME type is served -->
   <script src="/js/non-critical.js" defer></script>
 </body>
 
