--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Catering Menu</title>
-  <style>
+  <!-- <style>
     /* Critical CSS for above-the-fold content */
     body {
       margin: 0;
@@ -46,11 +46,11 @@
       height: 400px;
       background-color: #e0e0e0;
     }
-  </style>
+  </style> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <!-- <link rel="preload" as="image" href="https://vcaterings.com/img/hero2.f269c4f2.jpg"> -->
-  <link rel="preload" as="image" href="https://vcaterings.com/img/hero1.43374f2e.jpg">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.png">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <!-- Ensure the correct MIME type is served -->
   <link rel="stylesheet" href="public/styles/global.css">
