--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <!-- <link rel="preload" as="image" href="https://vcaterings.com/img/hero2.f269c4f2.jpg"> -->
-  <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.39043808.png">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <!-- Ensure the correct MIME type is served -->
   <link rel="stylesheet" href="public/styles/global.css">
