--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Catering Menu</title>
-  <!-- <style>
-    /* Critical CSS for above-the-fold content */
+
+  <!-- Critical CSS -->
+  <style>
     body {
       margin: 0;
       font-family: Poppins, sans-serif;
     }
-
     .hero-left {
       background-color: #ffd700;
       padding: 24px;
@@ -23,38 +23,39 @@
       justify-content: center;
       border: 6px solid black;
     }
-
     .hero-title {
       font-size: 80px;
       font-weight: 300;
       margin-bottom: 16px;
     }
-
     .hero-description {
       font-size: 20px;
       font-weight: 300;
     }
-
     .hero-image {
       height: 400px;
       width: 100%;
       object-fit: cover;
     }
-
     .placeholder {
       width: 100%;
       height: 400px;
       background-color: #e0e0e0;
     }
-  </style> -->
+  </style>
+
+  <!-- Font and Icon Styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <!-- <link rel="preload" as="image" href="https://vcaterings.com/img/hero2.f269c4f2.jpg"> -->
+
+  <!-- Preload Critical Assets -->
   <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <!-- Ensure the correct MIME type is served -->
-  <link rel="stylesheet" href="public/styles/global.css">
-  <link rel="stylesheet" href="/css/non-critical.css" defer>
+
+  <!-- Non-Critical CSS -->
+  <link rel="stylesheet" href="/css/non-critical.css" media="print" onload="this.media='all'">
 </head>
 
 <body>
@@ -63,7 +64,8 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- Ensure the correct MIME type is served -->
+
+  <!-- Non-Critical JavaScript -->
   <script src="/js/non-critical.js" defer></script>
 </body>
 
