--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,9 @@
   <!-- Preload Critical Assets -->
   <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+   <!-- Preload critical CSS resources -->
+   <link rel="preload" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" as="style">
+   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" as="style">
 
   <!-- Non-Critical CSS -->
   <link rel="stylesheet" href="/css/non-critical.css" media="print" onload="this.media='all'">
