--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 
   <!-- Non-Critical JavaScript -->
   <script src="/js/non-critical.js" defer></script>
-   <script src="https://js.stripe.com/v3" defer></script>
+   <!-- <script src="https://js.stripe.com/v3" defer></script> -->
 </body>
 
 </html>
