--- a/public/index.html
+++ b/public/index.html
@@ -59,19 +59,10 @@
 
   <!-- Preload critical images -->
   <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg" fetchpriority="high">
-  <img src="https://vcaterings.com/img/herobg.ea50cae2.jpg" alt="Catering" loading="lazy" class="hero-image">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/not-found.8293fca8.jpgg">
 
   <!-- Defer non-critical CSS -->
   <link rel="stylesheet" href="/css/non-critical.css" media="print" onload="this.media='all'">
-  <!-- Use Font-Display and Consider Self-Hosting Fonts -->
-<link rel="stylesheet" href="/fonts/poppins.css">
-<style>
-  @font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('/fonts/poppins-regular.woff2') format('woff2');
-  }
-</style>
 </head>
 
 <body>
