--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <!-- Preload critical images -->
   <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg" fetchpriority="high">
   <link rel="preload" as="image" href="https://vcaterings.com/img/not-found.8293fca8.jpgg">
+  <link rel="preload" href="../assets/banner/herobg.webp" as="image">
 
   <!-- Defer non-critical CSS -->
   <link rel="stylesheet" href="/css/non-critical.css" media="print" onload="this.media='all'">
