--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" media="print" onload="this.media='all'">
 
   <!-- Preload critical images -->
-  <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.ea50cae2.jpg" fetchpriority="high">
-  <link rel="preload" as="image" href="https://vcaterings.com/img/not-found.8293fca8.jpgg">
-  <link rel="preload" href="../assets/banner/herobg.webp" as="image">
+  <link rel="preload" as="image" href="https://vcaterings.com/img/herobg.985092b6.webp" fetchpriority="high">
 
   <!-- Defer non-critical CSS -->
   <link rel="stylesheet" href="/css/non-critical.css" media="print" onload="this.media='all'">
