home file optimized

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
 
   <!-- Defer non-critical JavaScript -->
   <script src="/js/non-critical.js" defer></script>
+  <script src="https://js.stripe.com/v3/" defer></script>
 </body>
 
 </html>
