home file optimized

--- a/public/index.html
+++ b/public/index.html
@@ -52,12 +52,7 @@
 
   <!-- Defer non-critical JavaScript -->
   <script src="/js/non-critical.js" defer></script>
-  <script src="https://js.stripe.com/v3/" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mdi/font@latest/js/mdi.min" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15." async></script>
-  <script src="https://www.vcaterings.com/js/snackbar.20bae09c.js" defer></script>
-  <script src="https://www.vcaterings.com/js/scrollspy.5d" defer></script>
-  <script src="https://www.vcaterings.com/js/app.a4ab6a18.js" defer></script>
+  <script src="https://js.stripe.com/v3/" defer></script>>
 </body>
 
 </html>
