speed optimized and banner

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" media="print" onload="this.media='all'">
 
   <!-- Preload critical images -->
-  <link rel="preload" href="https://www.vcaterings.com/img/herobg.ea50cae2.jpg" as="image" fetchpriority="high">
+  <link rel="preload" href="https://www.vcaterings.com/img/herobg.985092b6.webp" as="image" fetchpriority="high">
 
   <!-- Defer non-critical CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" media="print" onload="this.media='all'">
