--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Discover our delicious catering menu with a minimum order of $250. Explore a variety of appetizers, meats, salads, and specialty desserts. Order online for delivery or pickup today!">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="preload" href="/public/styles/global.scss" as="style">
+  <link rel="stylesheet" href="/public/styles/global.scss">
   <!-- Preload favicon -->
   <link rel="preload" href="<%= BASE_URL %>favicon.ico" as="image" fetchpriority="high">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
